progetto fino al footer

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
       <!--find the perfetc gift-->
       <div class="container" id="contenitore1">
-        <div id="perfectgift">
+        <div class="text" id="perfectgift">
           Find the perfetc gift
-          <a href="#" id="shopnow">Shop now</a>
+          <a href="#" class="shop">Shop now</a>
         </div>
         <div class="prodotti">
           <div class="prodotto" id="kindle"></div>
@@ -45,6 +45,20 @@
           <div class="prodotto" id="pet"></div>
         </div>
       </div>
+
+      <!--play the gifting game-->
+      <div class="text center">
+        <div class="container" id="visore"></div>
+        Play the gifting game <a href="#" class="shop">Shop now</a>
+      </div>
+
+      <!--the sound of cheer-->
+      <div class="text center">
+        <div class="container" id="headphones"></div>
+        The sound of cheer <a href="#" class="shop">Shop Audi & Accessories</a>
+      </div>
     </main>
+
+    <fooer> </fooer>
   </body>
 </html>
