progetto amazon html-css terminato

--- a/index.html
+++ b/index.html
@@ -26,26 +26,25 @@
     <!--main-->
     <main>
       <!--shop all holiday-->
-      <div id="orangecontainer">Shop All Holiday Gift Cards</div>
+      <div class="orangecontainer" id="top">Shop All Holiday Gift Cards</div>
       <div id="giftcontainer">
         <div class="gift" id="holiday">Holiday Gift Guides</div>
         <div class="gift" id="gogifter">Be a go-gifter</div>
       </div>
 
       <!--find the perfetc gift-->
-      <div class="container" id="contenitore1">
-        <div class="text" id="perfectgift">
-          Find the perfetc gift
-          <a href="#" class="shop">Shop now</a>
-        </div>
-        <div class="prodotti">
+      <div id="contenitore1">
+        <div id="prodotti">
+          <div class="text" id="perfectgift">
+            Find the perfect gift
+            <a href="#" class="shop">Shop now</a>
+          </div>
           <div class="prodotto" id="kindle"></div>
           <div class="prodotto" id="vaso"></div>
           <div class="prodotto" id="orologio"></div>
           <div class="prodotto" id="pet"></div>
         </div>
       </div>
-
       <!--play the gifting game-->
       <div class="text center">
         <div class="container" id="visore"></div>
@@ -55,10 +54,18 @@
       <!--the sound of cheer-->
       <div class="text center">
         <div class="container" id="headphones"></div>
-        The sound of cheer <a href="#" class="shop">Shop Audi & Accessories</a>
+        The sound of cheer
+        <a href="#" class="shop" id="sound">Shop Audi & Accessories</a>
       </div>
     </main>
 
-    <fooer> </fooer>
+    <footer>
+      <div id="lightbluecontainer">
+        <a href="#" class="back" id="top">Back to top</a>
+      </div>
+      <div id="bluecontainer">
+        <img src="../assets/logo.png" alt="logo" id="bottomlogo" />
+      </div>
+    </footer>
   </body>
 </html>
