--- a/Progetto Amazon HTML-CSS/index.html
+++ b/Progetto Amazon HTML-CSS/index.html
@@ -10,7 +10,7 @@
   <body>
     <!--logo-->
     <header>
-      <img src="../assets/logo.png" alt="logo" id="logo" />
+      <img src="assets/logo.png" alt="logo" id="logo" />
     </header>
 
     <!--navbar-->
@@ -64,7 +64,7 @@
         <a href="#" class="back" id="top">Back to top</a>
       </div>
       <div id="bluecontainer">
-        <img src="../assets/logo.png" alt="logo" id="bottomlogo" />
+        <img src="assets/logo.png" alt="logo" id="bottomlogo" />
       </div>
     </footer>
   </body>
